test/libsolidity/syntaxTests/errors/no_overloading.sol
error Err(uint);
error Err(bytes32);
// ----
// DeclarationError 2333: (17-36='error Err(bytes32);'): Identifier already declared.
